--- a/features/draft/spec/css-page-3.yml.dist
+++ b/features/draft/spec/css-page-3.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "131"
 compat_features:
   - css.at-rules.page.bottom-center
   - css.at-rules.page.bottom-left
