--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "131"
+    chrome_android: "131"
 compat_features:
   - css.properties.font-variant-emoji
