--- a/features/draft/spec/css-fonts-5.yml.dist
+++ b/features/draft/spec/css-fonts-5.yml.dist
@@ -138,12 +138,16 @@ compat_features:
   #   firefox_android: "118"
   - css.properties.font-synthesis.position
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "131"
   - css.properties.font-variant-emoji.emoji
   - css.properties.font-variant-emoji.normal
   - css.properties.font-variant-emoji.text
   - css.properties.font-variant-emoji.unicode
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
   - css.properties.font-variant.greek_accented_characters
   - css.properties.font-variant.uppercase_eszett
