--- a/features/page-setup.yml.dist
+++ b/features/page-setup.yml.dist
@@ -40,7 +40,8 @@ compat_features:
   - css.at-rules.page.size.jis-b5
 
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "131"
   - css.at-rules.page.bottom-center
   - css.at-rules.page.bottom-left
   - css.at-rules.page.bottom-left-corner
