--- a/features/align-content-block.yml
+++ b/features/align-content-block.yml
@@ -1,5 +1,5 @@
 name: align-content in block layouts
-description: The `align-content` property vertically aligns content in block layouts, and no longer requires a flex or grid layout.
+description: The `align-content` property vertically aligns content in block layouts, like it does in flex or grid layouts.
 spec: https://drafts.csswg.org/css-align-3/#align-justify-content
 group: layout
 compat_features:
