Add missing media query key

--- a/features/media-queries.yml
+++ b/features/media-queries.yml
@@ -15,6 +15,7 @@ compat_features:
   - css.at-rules.media.orientation
   - css.at-rules.media.aspect-ratio
   - css.types.ratio
+  - css.types.ratio.number_value
   - css.at-rules.media.color-index
   - css.at-rules.media.calc
   - css.at-rules.media.media_features
