--- a/features/media-queries.yml.dist
+++ b/features/media-queries.yml.dist
@@ -140,3 +140,7 @@ compat_features:
   #   firefox: "59"
   #   firefox_android: "59"
   - css.at-rules.media.media_query_values
+
+  # baseline: false
+  # support: {}
+  - css.types.ratio.number_value
