Update features/filter.yml from feedback
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/filter.yml
+++ b/features/filter.yml
@@ -1,5 +1,5 @@
 name: filter
-description: The `filter` CSS property applies one or more graphic effects to an element. Filter functions, such as `blur()` and `drop-shadow()`, can be used or combined to produce different effects.
+description: The `filter` CSS property applies one or more graphic effects to an element. You can use filter functions, such as `blur()` and `drop-shadow()`, alone or combined to produce different effects.
 spec: https://drafts.fxtf.org/filter-effects-1/#propdef-filter
 group: css
 caniuse: css-filters
