Differentiates COLR versions

--- a/features/colrv1.yml
+++ b/features/colrv1.yml
@@ -1,5 +1,5 @@
 name: COLRv1
-description: COLRv1 is a font format that supports multi-color glyphs.
+description: COLRv1 is a font format that supports multi-color glyphs. COLRv1 extends COLRv0 to support gradients, transforms, and blending modes.
 spec: https://www.iso.org/standard/87621.html
 group: fonts
 caniuse: colr-v1
