--- a/features/colrv0.yml
+++ b/features/colrv0.yml
@@ -1,5 +1,5 @@
 name: COLRv0
-description: COLRv0 is a font format that supports multi-color glyphs.
+description: COLRv0 is a font format that supports multi-color glyphs. COLRv0 supports only solid colors.
 spec: https://www.iso.org/standard/87621.html
 group: fonts
 caniuse: colr
