Adds additional font related keys (#2151)
Co-authored-by: James Stuckey Weber <jamesnw@gmail.com>

--- a/features/font-shorthand.yml
+++ b/features/font-shorthand.yml
@@ -4,3 +4,9 @@ spec: https://drafts.csswg.org/css-fonts-4/#font-prop
 group: fonts
 compat_features:
   - css.properties.font
+  - css.properties.font.caption
+  - css.properties.font.icon
+  - css.properties.font.menu
+  - css.properties.font.message-box
+  - css.properties.font.small-caption
+  - css.properties.font.status-bar
