--- a/features/font-shorthand.yml.dist
+++ b/features/font-shorthand.yml.dist
@@ -15,3 +15,9 @@ status:
     safari_ios: "1"
 compat_features:
   - css.properties.font
+  - css.properties.font.caption
+  - css.properties.font.icon
+  - css.properties.font.menu
+  - css.properties.font.message-box
+  - css.properties.font.small-caption
+  - css.properties.font.status-bar
