--- a/features/font-face.yml.dist
+++ b/features/font-face.yml.dist
@@ -95,3 +95,46 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - css.at-rules.font-face.WOFF_2
+
+  # baseline: low
+  # baseline_low_date: 2023-09-18
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   firefox: "107"
+  #   firefox_android: "107"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - css.at-rules.font-face.src.tech_keyword
+
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  #   safari: "9.1"
+  #   safari_ios: "9.3"
+  - css.at-rules.font-face.OpenType_SBIX
+
+  # baseline: false
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   safari: "4"
+  #   safari_ios: "5"
+  - css.at-rules.font-face.src.format_keyword
+
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  - css.at-rules.font-face.OpenType_CBDT_CBLC
+
+  # baseline: false
+  # support:
+  #   firefox: "109"
+  #   firefox_android: "109"
+  - css.at-rules.font-face.src.drop_invalid_item
