Adds key to borders feature

--- a/features/borders.yml
+++ b/features/borders.yml
@@ -33,3 +33,4 @@ compat_features:
   - css.properties.border-top-style
   - css.properties.border-top-width
   - css.properties.border-width
+  - css.types.line-style
