--- a/features/borders.yml.dist
+++ b/features/borders.yml.dist
@@ -64,6 +64,7 @@ compat_features:
   #   safari: "1"
   #   safari_ios: "3"
   - css.properties.border-width
+  - css.types.line-style
 
   # baseline: high
   # baseline_low_date: 2015-07-29
