--- a/features/background-attachment.yml
+++ b/features/background-attachment.yml
@@ -8,3 +8,4 @@ compat_features:
   - css.properties.background-attachment.fixed
   - css.properties.background-attachment.local
   - css.properties.background-attachment.scroll
+  - css.properties.background-attachment.multiple_backgrounds
