--- a/features/background-attachment.yml.dist
+++ b/features/background-attachment.yml.dist
@@ -29,6 +29,19 @@ compat_features:
   - css.properties.background-attachment.scroll
 
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "3.6"
+  #   firefox_android: "4"
+  #   safari: "1.3"
+  #   safari_ios: "3.2"
+  - css.properties.background-attachment.multiple_backgrounds
+
+  # baseline: high
   # baseline_low_date: 2022-03-14
   # baseline_high_date: 2024-09-14
   # support:
