Adds key to background feature

--- a/features/background.yml
+++ b/features/background.yml
@@ -4,3 +4,4 @@ spec: https://drafts.csswg.org/css-backgrounds-3/#background
 group: background
 compat_features:
   - css.properties.background
+  - css.properties.background.multiple_backgrounds
