--- a/features/input-color.yml
+++ b/features/input-color.yml
@@ -1,5 +1,5 @@
 name: '<input type="color">'
-description: The `<input>` HTML element with the `type="color"` attribute represents a color picker, which might be styled differently by the browser.
+description: The `<input type="color">` HTML element represents a color picker.
 spec: https://html.spec.whatwg.org/multipage/input.html#color-state-(type=color)
 group:
   - forms
