--- a/features/input-email-tel-url.yml
+++ b/features/input-email-tel-url.yml
@@ -1,4 +1,4 @@
-name: <input> with types email, tel, and url
+name: Email, telephone, and URL <input> types
 description: The `<input>` element allows the user to input information to a form intended for email addresses, telephone numbers or URLs. Particularly useful in combination with form validation.
 spec:
   - https://html.spec.whatwg.org/multipage/input.html#email-state-(type=email)
