--- a/features/input.yml
+++ b/features/input.yml
@@ -1,5 +1,5 @@
 name: <input>
-description: The `<input>` element allows the user to input information to a form; a number of types of input data and control widgets are available, depending on the device and browser.
+description: The `<input type="text">` HTML element allows the user to input information into a form. By default, an `<input>` element is a text input.
 spec: https://html.spec.whatwg.org/multipage/input.html#the-input-element
 group:
   - forms
