--- a/features/input-email-tel-url.yml
+++ b/features/input-email-tel-url.yml
@@ -1,5 +1,5 @@
 name: Email, telephone, and URL <input> types
-description: The `<input>` element allows the user to input information to a form intended for email addresses, telephone numbers or URLs. Particularly useful in combination with form validation.
+description: The `<input type="email">`, `<input type="tel">`, and `<input type="url">` HTML elements represent email address, telephone number, and URL fields in a form.
 spec:
   - https://html.spec.whatwg.org/multipage/input.html#email-state-(type=email)
   - https://html.spec.whatwg.org/multipage/input.html#telephone-state-(type=tel)
