--- a/features/ua-client-hints.yml.dist
+++ b/features/ua-client-hints.yml.dist
@@ -13,6 +13,13 @@ compat_features:
   #   chrome: "89"
   #   chrome_android: "89"
   #   edge: "89"
+  - http.headers.Accept-CH.Sec-CH-UA
+  - http.headers.Accept-CH.Sec-CH-UA-Arch
+  - http.headers.Accept-CH.Sec-CH-UA-Full-Version
+  - http.headers.Accept-CH.Sec-CH-UA-Mobile
+  - http.headers.Accept-CH.Sec-CH-UA-Model
+  - http.headers.Accept-CH.Sec-CH-UA-Platform
+  - http.headers.Accept-CH.Sec-CH-UA-Platform-Version
   - http.headers.Sec-CH-UA
   - http.headers.Sec-CH-UA-Arch
   - http.headers.Sec-CH-UA-Mobile
