--- a/features/speculation-rules.yml
+++ b/features/speculation-rules.yml
@@ -1,5 +1,5 @@
 name: Speculation rules
-description: Speculation rules are hints to the browser which pages to proactively download in the background so it can be instantly displayed to the user when they navigate to it.
+description: Speculation rules are hints to the browser to proactively download pages in the background so they appear instantly when the user navigates to them.
 spec:
   - https://wicg.github.io/nav-speculation/speculation-rules.html
   - https://wicg.github.io/nav-speculation/prerendering.html
