--- a/features/screen-capture.yml
+++ b/features/screen-capture.yml
@@ -1,5 +1,5 @@
 name: Screen capture
-description: The `navigator.mediaDevices.getDisplayMedia()` method lets the user select a screen or portion of a screen (such as a window) to capture as a media stream.
+description: The `navigator.mediaDevices.getDisplayMedia()` method asks the user to choose a screen or portion of a screen (such as a window) to capture as a media stream.
 spec: https://w3c.github.io/mediacapture-screen-share/
 status:
   compute_from: api.MediaDevices.getDisplayMedia
