Add screen capture (#2185)
* Add screen capture

* Update features/screen-capture.yml

Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

---------

Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/screen-capture.yml
+++ b/features/screen-capture.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-28
-name: Screen Capture
-description: TODO
+name: Screen capture
+description: The `navigator.mediaDevices.getDisplayMedia()` method asks the user to choose a screen or portion of a screen (such as a window) to capture as a media stream.
 spec: https://w3c.github.io/mediacapture-screen-share/
+status:
+  compute_from: api.MediaDevices.getDisplayMedia
 compat_features:
   - api.CaptureController
   - api.CaptureController.CaptureController
