--- a/features/input-date-time.yml.dist
+++ b/features/input-date-time.yml.dist
@@ -48,4 +48,13 @@ compat_features:
   #   chrome_android: "25"
   #   edge: "12"
   #   firefox_android: "18"
+  #   safari_ios: ≤11.3
+  - html.elements.input.type_month
+
+  # baseline: false
+  # support:
+  #   chrome: "20"
+  #   chrome_android: "25"
+  #   edge: "12"
+  #   firefox_android: "18"
   - html.elements.input.type_week
