--- a/features/input-range.yml
+++ b/features/input-range.yml
@@ -12,5 +12,4 @@ compat_features:
   # - html.elements.input.step
   - html.elements.input.type_range
   - html.elements.input.type_range.vertical_orientation
-  # Excluded because of a non-real value
-  # - html.elements.input.type_range.tick_marks
+  - html.elements.input.type_range.tick_marks
