--- a/features/input.yml
+++ b/features/input.yml
@@ -75,8 +75,7 @@ compat_features:
   - html.elements.input.placeholder
   - html.elements.input.readonly
   - html.elements.input.required
-  # Excluded because of a non-real value
-  # - html.elements.input.size
+  - html.elements.input.size
   - html.elements.input.src
   - html.elements.input.type_button
   - html.elements.input.type_checkbox
