--- a/features/input.yml.dist
+++ b/features/input.yml.dist
@@ -51,6 +51,7 @@ compat_features:
   - html.elements.input.maxlength
   - html.elements.input.name
   - html.elements.input.readonly
+  - html.elements.input.size
   - html.elements.input.src
   - html.elements.input.type_button
   - html.elements.input.type_checkbox
