--- a/features/input-range.yml.dist
+++ b/features/input-range.yml.dist
@@ -7,7 +7,7 @@ status:
   support:
     chrome: "124"
     chrome_android: "124"
-    edge: "12"
+    edge: ≤79
     firefox: "120"
     firefox_android: "120"
     safari: "16.5"
@@ -26,7 +26,18 @@ compat_features:
   #   safari_ios: "5"
   - html.elements.input.type_range
 
-  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-01-17
+  # support:
+  #   chrome: ≤67
+  #   chrome_android: "67"
+  #   edge: ≤79
+  #   firefox: "109"
+  #   firefox_android: "109"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - html.elements.input.type_range.tick_marks
+
   # baseline: low
   # baseline_low_date: 2024-04-16
   # support:
