Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/background-origin.yml
+++ b/features/background-origin.yml
@@ -1,5 +1,5 @@
 name: background-origin
-description: The `background-origin` CSS property sets the background origin position relative to the border and padding of an element.
+description: The `background-origin` CSS property sets the background starting position relative to the border and padding of an element.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background-origin
 group: background
 compat_features:
