--- a/features/background-position.yml
+++ b/features/background-position.yml
@@ -1,5 +1,5 @@
 name: background-position
-description: The `background-position` CSS property sets the initial position of background images relative to the background origin.
+description: The `background-position` CSS property offsets the initial position of background images relative to the background origin.
 spec: https://drafts.csswg.org/css-backgrounds-3/#background-position
 group: background
 caniuse:
