Remove lang-list-wildcard, update descriptions

--- a/features/case-insensitive-attributes.yml
+++ b/features/case-insensitive-attributes.yml
@@ -1,5 +1,5 @@
 name: Case-insensitive attribute selector
-description: The case-insensitive CSS attribute selectors match values with an `i` before the closing bracket.
+description: The `i` identifier in a CSS attribute selector matches attribute values case-insensitively in document languages like XML where attribute values are case-sensitive.
 spec: https://drafts.csswg.org/selectors-4/#attribute-case
 caniuse: css-case-insensitive
 group: selectors
