--- a/features/case-sensitive-attributes.yml
+++ b/features/case-sensitive-attributes.yml
@@ -1,5 +1,5 @@
 name: Case-sensitive attribute selector
-description: The case-sensitive CSS attribute selectors match elements with case-sensitive values like `class`, `id`, and `data-*` attributes. An `s` before the closing bracket makes the value case sensitive.
+description: The `s` identifier in a CSS attribute selector matches attribute values case-sensitively in document languages like HTML where attribute values are case-insensitive.
 spec: https://drafts.csswg.org/selectors-4/#attribute-case
 group: selectors
 compat_features:
