--- a/features/target-within.yml
+++ b/features/target-within.yml
@@ -1,5 +1,5 @@
 name: :target-within
-description: "The `:target-within` CSS pseudo-class represents the target element with an id matching the URL fragment."
+description: The `:target-within` CSS pseudo-class selects the element with an id matching the URL fragment and its ancestors.
 spec: https://drafts.csswg.org/selectors-4/#the-target-within-pseudo
 group: selectors
 compat_features:
