--- a/features/open-closed.yml
+++ b/features/open-closed.yml
@@ -1,6 +1,6 @@
 name: Open and closed selectors
-description: "The `:open` and `:closed` CSS selectors [TODO]"
-spec: ""
+description: The `:open` and `:closed` CSS pseudo-classes match elements that have open and closed states, like `<details`, `<dialog>`, or `<select>`, based on their state.
+spec: https://drafts.csswg.org/selectors-4/#open-state
 group: selectors
 compat_features:
   - css.selectors.closed
