Add missing flexbox, font-face and text-emphasis keys

--- a/features/flexbox.yml
+++ b/features/flexbox.yml
@@ -46,6 +46,7 @@ compat_features:
   - css.properties.flex-direction.row-reverse
   - css.properties.flex-flow
   - css.properties.flex-grow
+  - css.properties.flex-grow.less_than_zero_animate
   - css.properties.flex-shrink
   - css.properties.flex-wrap
   - css.properties.flex-wrap.nowrap
