--- a/features/font-face.yml
+++ b/features/font-face.yml
@@ -17,6 +17,7 @@ compat_features:
   - css.at-rules.font-face.src
   - css.at-rules.font-face.src.drop_invalid_item
   - css.at-rules.font-face.src.format_keyword
+  - css.at-rules.font-face.src.format_variations
   - css.at-rules.font-face.src.tech_keyword
   - css.at-rules.font-face.unicode-range
   - css.at-rules.font-face.WOFF
