--- a/features/font-face.yml.dist
+++ b/features/font-face.yml.dist
@@ -96,6 +96,19 @@ compat_features:
   #   safari_ios: "10"
   - css.at-rules.font-face.WOFF_2
 
+  # baseline: high
+  # baseline_low_date: 2018-09-05
+  # baseline_high_date: 2021-03-05
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "17"
+  #   firefox: "62"
+  #   firefox_android: "62"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - css.at-rules.font-face.src.format_variations
+
   # baseline: low
   # baseline_low_date: 2023-09-18
   # support:
