--- a/features/text-emphasis.yml
+++ b/features/text-emphasis.yml
@@ -8,6 +8,7 @@ compat_features:
   - css.properties.text-emphasis
   - css.properties.text-emphasis-color
   - css.properties.text-emphasis-position
+  - css.properties.text-emphasis-position.auto
   - css.properties.text-emphasis-position.left
   - css.properties.text-emphasis-position.over
   - css.properties.text-emphasis-position.right
