--- a/features/text-emphasis.yml.dist
+++ b/features/text-emphasis.yml.dist
@@ -76,3 +76,9 @@ compat_features:
   #   safari_ios: ≤13.4
   - css.properties.text-emphasis-position.over
   - css.properties.text-emphasis-position.under
+
+  # baseline: false
+  # support:
+  #   firefox: "132"
+  #   firefox_android: "132"
+  - css.properties.text-emphasis-position.auto
