Adds table specific CSS properties to table feature

--- a/features/table.yml
+++ b/features/table.yml
@@ -66,3 +66,13 @@ compat_features:
   - html.elements.th.scope
   - html.elements.thead
   - html.elements.tr
+  - css.properties.border-collapse
+  - css.properties.border-collapse.collapse
+  - css.properties.border-collapse.separate
+  - css.properties.border-spacing
+  - css.properties.caption-side
+  - css.properties.caption-side.bottom
+  - css.properties.caption-side.top
+  - css.properties.caption-side.writing-mode_relative_values
+  - css.properties.empty-cells
+  - css.properties.table-layout
