--- a/features/float-clear.yml
+++ b/features/float-clear.yml
@@ -1,5 +1,5 @@
 name: float and clear
-description: The `float` CSS property aligns an element to either side of its container, allowing text and inline elements to flow around it. The `clear` CSS property sets whether an is moved below floating elements that proceed it.
+description: The `float` CSS property aligns an element to either side of its container, allowing text and inline elements to flow around it. The `clear` CSS property sets whether an element is moved below floating elements that proceed it.
 spec:
   - https://drafts.csswg.org/css2/#propdef-float
   - https://drafts.csswg.org/css2/#propdef-clear
