Adds additional caption style keys

--- a/features/table.yml
+++ b/features/table.yml
@@ -72,7 +72,9 @@ compat_features:
   - css.properties.border-spacing
   - css.properties.caption-side
   - css.properties.caption-side.bottom
+  - css.properties.caption-side.bottom-outside
   - css.properties.caption-side.top
+  - css.properties.caption-side.top-outside
   - css.properties.caption-side.writing-mode_relative_values
   - css.properties.empty-cells
   - css.properties.table-layout
