--- a/features/table.yml.dist
+++ b/features/table.yml.dist
@@ -206,3 +206,8 @@ compat_features:
   #   firefox: "42"
   #   firefox_android: "42"
   - css.properties.caption-side.writing-mode_relative_values
+
+  # baseline: false
+  # support: {}
+  - css.properties.caption-side.bottom-outside
+  - css.properties.caption-side.top-outside
