--- a/features/form-validity-pseudos.yml
+++ b/features/form-validity-pseudos.yml
@@ -1,4 +1,4 @@
-name: Form validity pseudos
+name: Form validity pseudo-classes
 description: "The form validity CSS pseudo-classes match <form> elements that are `:valid` or `:invalid`, `:optional` or `:required`, or in or out of an acceptable range."
 spec: https://drafts.csswg.org/selectors-4/#ui-validity
 caniuse:
