--- a/features/scope-pseudo.yml
+++ b/features/scope-pseudo.yml
@@ -1,5 +1,5 @@
-name: Scope pseudo
-description: "The `:scope` CSS pseudo-class represents elements that are a reference point for selectors to match against."
+name: :scope pseudo-class
+description: The `:scope` CSS pseudo-class represents the scoping root, for instance the element that `querySelector()` is called on.
 spec: https://drafts.csswg.org/selectors-4/#the-scope-pseudo
 group: selectors
 compat_features:
