--- a/features/focus-within.yml
+++ b/features/focus-within.yml
@@ -1,4 +1,4 @@
-name: ":focus-within"
+name: :focus-within
 description: "The `:focus-within` CSS pseudo-class matches an element if the element or any of its children are focused."
 spec: https://drafts.csswg.org/selectors-4/#the-focus-within-pseudo
 caniuse: css-focus-within
