--- a/features/input-range.yml
+++ b/features/input-range.yml
@@ -1,5 +1,5 @@
 name: '<input type="range">'
-description: The `<input>` element allows the user to select a value using a slider widget.
+description: The `<input type="range">` element allows the user to choose a value using a slider widget.
 spec: https://html.spec.whatwg.org/multipage/input.html#range-state-(type=range)
 group:
   - forms
