--- a/features/referrer-policy.yml.dist
+++ b/features/referrer-policy.yml.dist
@@ -142,9 +142,89 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "52"
+  #   chrome_android: "52"
+  #   edge: "79"
+  #   safari: "14"
+  #   safari_ios: "14"
+  - api.HTMLAnchorElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLAnchorElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLAnchorElement.referrerPolicy.unsafe-url
+  - api.HTMLIFrameElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLIFrameElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLIFrameElement.referrerPolicy.unsafe-url
+  - api.HTMLImageElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLImageElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLImageElement.referrerPolicy.unsafe-url
+
+  # baseline: false
+  # support:
+  #   chrome: "52"
+  #   chrome_android: "52"
+  #   edge: "79"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.HTMLAreaElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLAreaElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLAreaElement.referrerPolicy.unsafe-url
+
+  # baseline: false
+  # support:
+  #   chrome: "58"
+  #   chrome_android: "58"
+  #   edge: "79"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.HTMLLinkElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLLinkElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLLinkElement.referrerPolicy.unsafe-url
+
+  # baseline: false
+  # support:
+  #   chrome: "70"
+  #   chrome_android: "70"
+  #   edge: "79"
+  #   safari: "14"
+  #   safari_ios: "14"
+  - api.HTMLScriptElement.referrerPolicy.no-referrer-when-downgrade
+  - api.HTMLScriptElement.referrerPolicy.origin-when-cross-origin
+  - api.HTMLScriptElement.referrerPolicy.unsafe-url
+
+  # baseline: false
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "79"
+  - html.elements.a.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.a.referrerpolicy.origin-when-cross-origin
+  - html.elements.a.referrerpolicy.unsafe-url
+  - html.elements.area.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.area.referrerpolicy.origin-when-cross-origin
+  - html.elements.area.referrerpolicy.unsafe-url
+  - html.elements.iframe.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.iframe.referrerpolicy.origin-when-cross-origin
+  - html.elements.iframe.referrerpolicy.unsafe-url
+  - html.elements.img.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.img.referrerpolicy.origin-when-cross-origin
+  - html.elements.img.referrerpolicy.unsafe-url
+  - html.elements.link.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.link.referrerpolicy.origin-when-cross-origin
+  - html.elements.link.referrerpolicy.unsafe-url
+
+  # baseline: false
+  # support:
   #   chrome: "56"
   #   chrome_android: "56"
   #   edge: "79"
   - http.headers.Referrer-Policy.no-referrer-when-downgrade
   - http.headers.Referrer-Policy.origin-when-cross-origin
   - http.headers.Referrer-Policy.unsafe-url
+
+  # baseline: false
+  # support:
+  #   chrome: "70"
+  #   chrome_android: "70"
+  #   edge: ≤79
+  - html.elements.script.referrerpolicy.no-referrer-when-downgrade
+  - html.elements.script.referrerpolicy.origin-when-cross-origin
+  - html.elements.script.referrerpolicy.unsafe-url
