Uncomment keys excluded for non-real values, now fixed

--- a/features/table.yml
+++ b/features/table.yml
@@ -53,16 +53,14 @@ compat_features:
   - html.elements.td.colspan
   - html.elements.td.headers
   - html.elements.td.rowspan
-  # Excluded because of a non-real value
-  # - html.elements.td.rowspan.rowspan_zero
+  - html.elements.td.rowspan.rowspan_zero
   - html.elements.tfoot
   - html.elements.th
   - html.elements.th.abbr
   - html.elements.th.colspan
   - html.elements.th.headers
   - html.elements.th.rowspan
-  # Excluded because of a non-real value
-  # - html.elements.th.rowspan.rowspan_zero
+  - html.elements.th.rowspan.rowspan_zero
   - html.elements.th.scope
   - html.elements.thead
   - html.elements.tr
