--- a/features/meta.yml
+++ b/features/meta.yml
@@ -14,8 +14,7 @@ compat_features:
   - html.elements.meta.charset
   - html.elements.meta.content
   - html.elements.meta.http-equiv
-  # Excluded because of a non-real value
-  # - html.elements.meta.http-equiv.content-type
+  - html.elements.meta.http-equiv.content-type
   - html.elements.meta.http-equiv.refresh
   - html.elements.meta.name
   - html.elements.meta.name.referrer
