--- a/features/table.yml.dist
+++ b/features/table.yml.dist
@@ -143,3 +143,18 @@ compat_features:
   #   safari: "6"
   #   safari_ios: "6"
   - api.HTMLTableElement.createTBody
+
+  # baseline: false
+  # support:
+  #   chrome: "65"
+  #   chrome_android: "65"
+  #   edge: "79"
+  #   firefox: ≤55
+  #   firefox_android: "55"
+  - html.elements.td.rowspan.rowspan_zero
+
+  # baseline: false
+  # support:
+  #   firefox: ≤55
+  #   firefox_android: "55"
+  - html.elements.th.rowspan.rowspan_zero
