--- a/features/scope-pseudo.yml
+++ b/features/scope-pseudo.yml
@@ -1,5 +1,5 @@
-name: :scope pseudo-class
-description: The `:scope` CSS pseudo-class represents the scoping root, for instance the element that `querySelector()` is called on.
+name: :scope (pseudo-class)
+description: The `:scope` CSS pseudo-class matches the scoping root, for instance the element that `querySelector()` is called on, or the root of a DOM subtree specified with `@scope`.
 spec: https://drafts.csswg.org/selectors-4/#the-scope-pseudo
 group: selectors
 compat_features:
