--- a/features/ink.yml.dist
+++ b/features/ink.yml.dist
@@ -3,21 +3,14 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "94"
+    chrome_android: "94"
+    edge: "93"
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "94"
-  #   chrome_android: "94"
-  #   edge: "93"
   - api.DelegatedInkTrailPresenter
   - api.DelegatedInkTrailPresenter.presentationArea
   - api.DelegatedInkTrailPresenter.updateInkTrailStartPoint
   - api.Ink
   - api.Ink.requestPresenter
   - api.Navigator.ink
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - api.DelegatedInkTrailPresenter.expectedImprovement
