--- a/features/nth-of-type.yml
+++ b/features/nth-of-type.yml
@@ -1,5 +1,5 @@
 name: ":nth-of-type() pseudo-classes"
-description: "The `:nth-of-type()` CSS functional pseudo-classes match elements based on their position among siblings of the same type, counted from the first or last sibling. The `:only-of-type` pseudo-class matches any element that is the only child of its type, of its parent."
+description: "The `:nth-of-type()` and `:nth-last-of-type()` CSS functional pseudo-classes match elements based on their position among siblings of the same type, counted from the first or last sibling. The `:first-of-type` and `:last-of-type` pseudo-classes match the first and last elements of its type, and the `:only-of-type` pseudo-class matches any element that has no siblings of the same type."
 spec: https://drafts.csswg.org/selectors-4/#typed-child-index
 group: selectors
 compat_features:
