move more keys out of input

--- a/features/input-checkbox.yml
+++ b/features/input-checkbox.yml
@@ -5,4 +5,6 @@ group:
   - forms
   - html-elements
 compat_features:
+  - api.HTMLInputElement.defaultChecked
+  - api.HTMLInputElement.indeterminate
   - html.elements.input.type_checkbox
