--- a/features/input-number.yml.dist
+++ b/features/input-number.yml.dist
@@ -38,6 +38,7 @@ compat_features:
   #   safari: "5"
   #   safari_ios: "4"
   - api.HTMLInputElement.step
+  - api.HTMLInputElement.valueAsNumber
   - html.elements.input.step
 
   # baseline: high
