--- a/features/input-number.yml
+++ b/features/input-number.yml
@@ -6,6 +6,7 @@ group:
   - html-elements
 caniuse: input-number
 compat_features:
+  - api.HTMLInputElement.valueAsNumber
   - api.HTMLInputElement.max
   - api.HTMLInputElement.min
   - api.HTMLInputElement.step
