--- a/features/page-visibility.yml
+++ b/features/page-visibility.yml
@@ -1,4 +1,4 @@
-name: Page Visibility
+name: Page visibility
 description: "The `document.visibilityState` and `document.hidden` properties tell you whether the page is visible to the user (for example, it's not minimized or in a background tab)."
 spec: https://html.spec.whatwg.org/multipage/interaction.html#page-visibility
 caniuse: pagevisibility
