--- a/features/page-transition-events.yml
+++ b/features/page-transition-events.yml
@@ -1,5 +1,5 @@
 name: Page Transition Events
-description: "The page transition events `pageshow` and `pagehide` are fired when a document is being loaded or unloaded due to a navigation, such as clicking on a link on a page, or the back button in a browser."
+description: "The `pageshow` and `pagehide` transition events fire when a document loads or unloads due to a navigation, such as clicking on a link on a page or the back button in a browser."
 spec: https://html.spec.whatwg.org/multipage/nav-history-apis.html#the-pagetransitionevent-interface
 caniuse: page-transition-events
 status:
