--- a/features/page-lifecycle.yml
+++ b/features/page-lifecycle.yml
@@ -1,4 +1,4 @@
-name: Page Lifecycle
+name: Page lifecycle
 description: "The Page Lifecycle API lets pages safely handle browser interventions such as page suspensions or discards from memory."
 spec: https://wicg.github.io/page-lifecycle/
 compat_features:
