--- a/features/page-lifecycle.yml
+++ b/features/page-lifecycle.yml
@@ -1,5 +1,5 @@
 name: Page lifecycle
-description: "The Page Lifecycle API lets pages safely handle browser interventions such as page suspensions or discards from memory."
+description: "The page lifecycle API helps you safely handle page suspensions or discards from memory. The `freeze` and `resume` events fire when the browser suspends or resumes a page from memory while the `document.wasDiscarded` property reports whether the page was reloaded after being dropped."
 spec: https://wicg.github.io/page-lifecycle/
 compat_features:
   - api.Document.freeze_event
