--- a/features/window-management.yml
+++ b/features/window-management.yml
@@ -1,5 +1,5 @@
 name: Window Management
-description: "The Window Management API allows you to query the device for information about its screens, and place content on specific screens, paving the way towards more effective multi-screen applications."
+description: "The Window Management API makes it possible to build multi-screen applications by providing access to information about the screens on a device, and to place content on a specific screen."
 spec: https://w3c.github.io/window-management/
 compat_features:
   - api.Element.requestFullscreen.options_screen_parameter
