desc and baseline tweaks

--- a/features/input-color.yml
+++ b/features/input-color.yml
@@ -1,5 +1,5 @@
 name: '<input type="color">'
-description: The `<input type="color">` HTML element represents a color picker.
+description: The `<input type="color">` HTML element displays a color picker, from which users can choose a color.
 spec: https://html.spec.whatwg.org/multipage/input.html#color-state-(type=color)
 group:
   - forms
