--- a/features/input-number.yml
+++ b/features/input-number.yml
@@ -1,5 +1,5 @@
 name: '<input type="number">'
-description: The `<input type="number">` HTML element allows the user to input numeric information to a form.
+description: The `<input type="number">` HTML element restricts input in the field to numeric data.
 spec: https://html.spec.whatwg.org/multipage/input.html#number-state-(type=number)
 group:
   - forms
