--- a/features/input-range.yml
+++ b/features/input-range.yml
@@ -5,6 +5,8 @@ group:
   - forms
   - html-elements
 caniuse: input-range
+status:
+  compute_from: html.elements.input.type_range
 compat_features:
   - html.elements.input.type_range
   - html.elements.input.type_range.vertical_orientation
