add missing key

--- a/features/webrtc.yml.dist
+++ b/features/webrtc.yml.dist
@@ -50,6 +50,7 @@ compat_features:
   #   firefox_android: "44"
   #   safari: "11"
   #   safari_ios: "11"
+  - api.RTCPeerConnection
   - api.RTCPeerConnection.RTCPeerConnection
   - api.RTCPeerConnection.addIceCandidate
   - api.RTCPeerConnection.close
