--- a/features/data-urls.yml
+++ b/features/data-urls.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-21
-name: The "data" URL scheme
-description: TODO
+name: Data URLs
+description: Data URLs are URLs prefixed with the `data:` scheme and embed small files inline in documents.
 spec: https://www.rfc-editor.org/rfc/rfc2397
+status:
+  compute_from: http.data-url
 compat_features:
   - http.data-url
   - http.data-url.css_files
