--- a/features/data-urls.yml
+++ b/features/data-urls.yml
@@ -1,5 +1,5 @@
 name: Data URLs
-description: Data URLs are URLs prefixed with the `data:` scheme and embed small files inline in documents.
+description: Data URLs are URLs that start with the `data:` scheme and which directly contain data rather than point to remote resources.
 spec: https://www.rfc-editor.org/rfc/rfc2397
 status:
   compute_from: http.data-url
