--- a/features/nth-child.yml
+++ b/features/nth-child.yml
@@ -1,4 +1,4 @@
-name: ":nth-child()
+name: ":nth-child()"
 description: "The `:nth-child()` and `:nth-last-child()` CSS functional pseudo-classes match elements based on their index within a list of elements. The `:first-child` and `:last-child` pseudo-classes match the first and last element in a list, and the `:only-child` pseudo-class matches an element with no siblings."
 spec:
   - https://drafts.csswg.org/selectors-3/#nth-child-pseudo
