Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/root.yml
+++ b/features/root.yml
@@ -1,5 +1,5 @@
 name: :root
-description: The `:root` pseudo-class matches the root element of the document.
+description: The `:root` pseudo-class matches the root element of the document, usually the `<html>` element.
 spec: https://drafts.csswg.org/selectors-4/#the-root-pseudo
 group: selectors
 compat_features:
