--- a/features/target.yml
+++ b/features/target.yml
@@ -1,5 +1,5 @@
 name: :target
-description: The `:target` CSS pseudo-class matches the element with an id matching the URL fragment.
+description: The `:target` CSS pseudo-class matches the element with an ID matching the URL fragment.
 spec: https://drafts.csswg.org/selectors-4/#the-target-pseudo
 group: selectors
 compat_features:
