--- a/features/nth-child.yml
+++ b/features/nth-child.yml
@@ -1,6 +1,19 @@
-name: ":nth-child() (initial support)"
-description: "The `:nth-child()` and `:nth-last-child()` CSS functional pseudo-classes match elements by the relative position of elements (first, second, third, fourth, and so on), counted from the first or last sibling."
+name: ":nth-child()"
+description: "The `:nth-child()` and `:nth-last-child()` CSS functional pseudo-classes match elements based on their index within a list of elements. The `:first-child` and `:last-child` pseudo-classes match the first and last element in a list, and the `:only-child` pseudo-class matches an element with no siblings."
 spec:
   - https://drafts.csswg.org/selectors-3/#nth-child-pseudo
   - https://drafts.csswg.org/selectors-3/#nth-last-child-pseudo
 group: selectors
+status:
+  compute_from: css.selectors.nth-child
+compat_features:
+  - css.selectors.first-child
+  - css.selectors.first-child.no_parent_required
+  - css.selectors.last-child
+  - css.selectors.last-child.no_parent_required
+  - css.selectors.nth-child
+  - css.selectors.nth-child.no_parent_required
+  - css.selectors.nth-last-child
+  - css.selectors.nth-last-child.no_parent_required
+  - css.selectors.only-child
+  - css.selectors.only-child.no_parent_required
